--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,13 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@300;400;500;600;700;800;900&display=swap');
-*{
+
+* {
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
 body {
+    background-size: cover;
+    background-position: center;
+    background-image: url("/assets/background/BackGround.png");
     font-family: "Open Sans", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
-    font-variation-settings:
-            "wdth" 100;
+    font-variation-settings: "wdth" 100;
     font-size: 18px;
     font-weight: 400;
     line-height: 29px;
@@ -15,6 +21,7 @@ body {
     overflow-x: hidden;
     width: 100vw;
 }
-.main-component{
+
+.main-component {
     display: flex;
 }
