--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@300;400;500;600;700;800;900&display=swap');
-
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 * {
     margin: 0;
     padding: 0;
@@ -7,9 +9,9 @@
 }
 
 body {
-    background-size: cover;
-    background-position: center;
-    background-image: url("/assets/background/BackGround.png");
+    /*background-size: cover;*/
+    /*background-position: center;*/
+    /*background-image: url("/assets/background/BackGround.png");*/
     font-family: "Open Sans", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
