--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,9 +9,8 @@
 }
 
 body {
-    /*background-size: cover;*/
-    /*background-position: center;*/
-    /*background-image: url('../assets/background/BackGround.png');*/
+    background-size: cover;
+    background-position: center;
     font-family: "Open Sans", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
