--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,13 +21,8 @@ body {
     scroll-behavior: smooth;
     overflow-x: hidden;
     width: 100vw;
-
+    background-color: black;
 }
-
-.main-component {
-    display: flex;
-}
-
 
 .movie-card {
     width: 150px;
@@ -36,7 +31,7 @@ body {
 }
 .movie-card img {
     width: auto;
-    height: 100 px;
+    height: 100px;
     border-radius: 8px;
 }
 .menu-component{
@@ -46,3 +41,10 @@ body {
     margin-top: 10%;
     border: 2px solid gray;
 }
+.main-component {
+     display: flex;
+    background-color: #414141;
+    width: 80%;
+    margin-left: 10%;
+    margin-top: 1%;
+ }
