--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,17 +34,20 @@ body {
     height: 100px;
     border-radius: 8px;
 }
-.menu-component{
-    background-color: #414141;
+.menu-component {
+    background-color: #323232;
     width: 80%;
     margin-left: 10%;
     margin-top: 10%;
-    border: 2px solid gray;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 20px;
 }
+
 .main-component {
-     display: flex;
+    display: flex;
     background-color: #414141;
-    width: 80%;
+    width: 80vw;
     margin-left: 10%;
     margin-top: 1%;
  }
