--- a/src/components/footer/footer-component.css
+++ b/src/components/footer/footer-component.css
@@ -3,8 +3,9 @@ footer{
     height: 20%;
     display: flex;
     justify-content: space-around;
-    background-color: #056194;
+    background-color: #2c2c2c;
     align-items: center;
+    margin-top: 100px;
 }
 .kino-cove{
     font-family: 'Inknut Antiqua', sans-serif;
