--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -3,7 +3,7 @@ header{
     height: 15%;
     display: flex;
     justify-content: space-around;
-    background-color: black;
+    background-color: #2c2c2c;
     align-items: center;
 }
 .kino-cove{
