--- a/src/components/header/menu-component.css
+++ b/src/components/header/menu-component.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@300;400;500;600;700;800;900&display=swap');
 
-.menuComponent{
-    width: 100%;
-    max-width: 1200px;
-    border: 2px solid gray;
-    margin: 20px 0;
-    padding: 10px;
+.menuComponent {
+    margin-top: 12%;
+    border-radius: 3%;
     box-sizing: border-box;
+    width: 80%;
+    margin-left: 10%;
+    max-width: 1400px;
 }
 
 .menuNavig {
@@ -14,9 +14,6 @@
     justify-content: end;
     align-items: center;
     list-style: none;
-    width: 100%;
-    max-width: 1200px;
-
 }
 
 .menuNavig li a {
@@ -26,15 +23,18 @@
 
 }
 
-.menuNavig li{
+.menuNavig li {
     display: flex;
     text-align: center;
-    background-color: gray;
+    justify-content: center;
+    border-radius: 10%;
     margin-left: 1px;
     width: 10%;
-    border: 5px solid gray;
+    border: 1px solid gray;
 }
 
-.menuNavig li a:hover {
+.menuNavig li:hover {
     text-decoration: underline;
+    background-color: #2c2c2c;
+    transform: translateY(-2px);
 }
