--- a/src/components/pagination/pagination-component.css
+++ b/src/components/pagination/pagination-component.css
@@ -7,7 +7,7 @@
 }
 
 .pagination-container button {
-    background-color: #2c3e50;
+    background-color: #191818;
     color: white;
     border: none;
     border-radius: 4px;
@@ -22,7 +22,7 @@
 }
 
 .pagination-container button:not(:disabled):hover {
-    background-color: #34495e;
+    background-color: #282626;
 }
 
 .pagination-container span {
