--- a/src/components/slider/movie-card-component.css
+++ b/src/components/slider/movie-card-component.css
@@ -6,6 +6,11 @@
     background-color: #1e1e1e;
     border-radius: 5px;
     overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease;
+}
+.movie-card:hover {
+    transform: scale(1.05);
 }
 
 .movie-card img {
