--- a/src/components/menu/menu-component.css
+++ b/src/components/menu/menu-component.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@300;400;500;600;700;800;900&display=swap');
 
-.menuComponent {
+.men-component {
     margin-top: 12%;
     border-radius: 3%;
     box-sizing: border-box;
@@ -9,31 +9,37 @@
     max-width: 1400px;
 }
 
-.menuNavig {
+.menu-navig {
     display: flex;
     justify-content: end;
     align-items: center;
     list-style: none;
 }
 
-.menuNavig li a {
-    text-decoration: none;
-    font-weight: bold;
-    color: white;
-
-}
-
-.menuNavig li {
+.menu-navig li {
     display: flex;
-    text-align: center;
     justify-content: center;
+    align-items: center;
     border-radius: 10%;
     margin-left: 1px;
     width: 10%;
     border: 1px solid gray;
+    background-color: transparent;
 }
 
-.menuNavig li:hover {
+.menu-navig li a {
+    text-decoration: none;
+    font-weight: bold;
+    color: white;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10%;
+}
+
+.menu-navig li:hover {
     text-decoration: underline;
     background-color: #2c2c2c;
     transform: translateY(-2px);
