--- a/src/components/search/search-component.css
+++ b/src/components/search/search-component.css
@@ -1,7 +1,7 @@
 .search-container {
     position: relative;
     display: inline-block;
-    width: 20%;
+    width: 30%;
 }
 
 .search-input {
@@ -9,22 +9,20 @@
     padding: 10px;
     height: 10%;
     border: 1px solid #2D2D2D;
-    background-color: #2D2D2D;
+    background-color: #373737;
     border-radius: 4px;
     font-size: 16px;
+    color: gray;
 }
 
-.search-button {
+.search-icon {
     position: absolute;
-    height: 100%;
+    right: 10px;
     top: 50%;
     transform: translateY(-50%);
-    background-color: #2D2D2D;
-    color: #2D2D2D;
-    border: none;
-    padding: 10px;
-    border-radius: 4px;
     cursor: pointer;
+    width: 30px;
+    height: 30px;
 }
 
 .search-results {
@@ -32,21 +30,33 @@
     top: 100%;
     left: 0;
     right: 0;
-    max-height: 300px;
+    max-height: 450px;
     overflow-y: auto;
-    background-color: #2D2D2D;
-    border: 1px solid #ccc;
+    background-color: #373737;
+    border: 1px solid #282626;
     border-radius: 4px;
     margin-top: 5px;
     z-index: 1000;
 }
-
+.search-results::-webkit-scrollbar {
+    width: 6px;
+}
+.search-results::-webkit-scrollbar-track {
+    background: black;
+}
+.search-results::-webkit-scrollbar-thumb {
+    background-color: #888;
+}
 .search-results li {
     padding: 10px;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid #282626;
     cursor: pointer;
 }
 
 .search-results li:hover {
-    background-color: #f1f1f1;
+    background-color: #4C4C4C;
+    /*transform: scale(1);*/
+}
+.search-results h2{
+    color: white;
 }
