--- a/src/components/slider/movie-slider-component.css
+++ b/src/components/slider/movie-slider-component.css
@@ -22,28 +22,11 @@
     transform: translateY(-50%);
     z-index: 100;
 }
-button img {
+.slider-button-1, .slider-button-2 img {
     width: 60px;
     height: 60px;
 }
 
 button:hover img {
-    transform: scale(1.5);
+    transform: scale(1.05);
 }
-
-/*.absolute {*/
-/*    position: absolute;*/
-/*    z-index: 10;*/
-/*}*/
-
-/*.left-0 {*/
-/*    left: 10px;*/
-/*}*/
-
-/*.right-0 {*/
-/*    right: 10px;*/
-/*}*/
-
-/*.transform {*/
-/*    transform: translateY(-50%);*/
-/*}*/
