--- a/src/components/movie-info/movies-info-component.css
+++ b/src/components/movie-info/movies-info-component.css
@@ -21,6 +21,12 @@
     margin-bottom: 10px;
     color: #ffcc00;
     font-size: 24px;
+    width: 80%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
 }
 .text-movies-info p {
     margin-bottom: 8px;
