--- a/src/components/footer/footer-component.css
+++ b/src/components/footer/footer-component.css
@@ -6,6 +6,7 @@ footer{
     background-color: #2c2c2c;
     align-items: center;
     margin-top: 100px;
+    color: white;
 }
 .kino-cove{
     font-family: 'Inknut Antiqua', sans-serif;
