--- a/src/components/movie-info/movie-info-component.css
+++ b/src/components/movie-info/movie-info-component.css
@@ -1,34 +1,34 @@
-.movie-container{
+.movie-container {
     height: 180vh;
     border: 1px solid #2c2c2c;
     background-color: #333;
-}
-.movie-info {
-    /*display: flex;*/
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 20px;
-    border: 1px solid #2c2c2c;
-    background-color: #333;
-    border-radius: 10px;
+    max-height: 1300px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transition: transform 0.3s ease;
-    height: 180vh;
-    max-height: 1300px;
+    border-radius: 10px;
+    padding: 20px;
+    flex-direction: row;
+    align-items: flex-start;
 }
-/*.movie-info:hover {*/
-/*    transform: scale(1.02);*/
-/*}*/
+
+.movie-info {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+}
+
 .movie-info .text-movie-info {
     max-width: 600px;
     margin-left: 20px;
     color: #f1f1f1;
 }
+
 .text-movie-info h2 {
     margin-bottom: 10px;
     color: #ffcc00;
     font-size: 24px;
 }
+
 .text-movie-info p {
     margin-bottom: 8px;
     line-height: 1.5;
@@ -40,38 +40,3 @@
     -webkit-line-clamp: 5;
     -webkit-box-orient: vertical;
 }
-
-.movie-info .rating {
-    margin-top: 20px;
-    font-size: 20px;
-    color: #ffcc00;
-}
-.movie-info .video-container {
-    margin-top: 20px;
-    border: 1px solid #444;
-    border-radius: 10px;
-    background-color: #222;
-    padding: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-.movie-info .video-container h3 {
-    margin-bottom: 10px;
-    color: #ffcc00;
-    font-size: 20px;
-}
-
-.movie-info .video-container iframe {
-    width: 100%;
-    height: 315px; /* Можна налаштувати висоту відео */
-    border: none;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-.movie-info .video-container p {
-    margin-top: 10px;
-    color: #ccc;
-    font-size: 14px;
-}
-
